# Mir200_Sim_withD435

./: .gitignore  README.md
mir_description/urdf/include/: _d435.urdf.xacro  mir_200.gazebo.xacro  mir_200_v1.urdf.xacro
mir_navigation/launch/: mir_start.launch
mir_navigation/launch/mir_launch/: nav_start.launch
mir_navigation/rviz/: navigation.rviz
mir_vision/: CMakeLists.txt  DataLog_Auswertung.ods  DetectionDataLog (Kopie).txt  DetectionDataLog.txt  package.xml
mir_vision/action/: CamDetection.action
mir_vision/config/: searchPoses.config
mir_vision/launch/: ActionServer.launch  DetectionAction.launch  DetectionClient.launch  DetectionServer.launch  LearnObject.launch  detection.launch
mir_vision/src/: ActionClient.cpp  ActionServer.cpp  LearnObject.cpp  detection.cpp  tutorial-mb-generic-tracker-rgbd-realsense.cpp
